# pyproject.toml

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volvopy"
description = "Connect to the Volvo API using Python."
# version = "0.1.1"  # latest/current distribution version
version = "0.1.12"  # latest test version
dependencies = []
license = "MIT"
authors = [
  { name="Mausy5043" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation"
]

[project.urls]
"Homepage" = "https://github.com/Mausy5043/volvopy"
"Bug Tracker" = "https://github.com/Mausy5043/volvopy/issues"
